# slime-ffi

./: .gitignore  Cargo.toml  README.md
slime-ffi/: Cargo.toml
slime-ffi-cli/: Cargo.toml
slime-ffi-codegen/: Cargo.toml
slime-ffi-codegen/src/: lib.rs
slime-ffi-codegen/src/lang/: mod.rs
slime-ffi-examples/: Cargo.toml
slime-ffi-gen/: Cargo.toml
slime-ffi-gen/src/: lib.rs  meta.rs  types.rs
slime-ffi-gen/src/scheme/: mod.rs
slime-ffi-ir/: Cargo.toml
slime-ffi-ir-parser/: Cargo.toml
slime-ffi-ir-parser/src/: lib.rs
slime-ffi-ir/src/: ast.rs  config.rs  lib.rs
slime-ffi-macro/: Cargo.toml
slime-ffi-macro/src/: attr.rs  lib.rs  scheme.rs  symbol.rs
slime-ffi-macro/src/types/: constants.rs  enum.rs  mod.rs  module.rs  name.rs  primitive.rs
slime-ffi-macro/src/types/transformer/: common.rs  jvm.rs  mod.rs
slime-ffi-macros/: Cargo.toml
slime-ffi-macros/src/: lib.rs
slime-ffi-rt/: Cargo.toml
slime-ffi-rt/src/: convert.rs  lib.rs
slime-ffi-rt/src/call/: mod.rs
slime-ffi-rt/src/runtime/: dart.rs  jvm.rs  mod.rs
slime-ffi-rt/src/types/: mod.rs
slime-ffi-test/: Cargo.toml
slime-ffi/src/: convert.rs  lib.rs  types.rs
slime-ffi/src/call/: mod.rs
slime-ffi/src/private/: mod.rs
slime-ffi/src/runtime/: common.rs  jvm.rs  mod.rs
slime-ffi/src/types/: ref.rs
