[workspace]
members = [
    "slime-ffi",
    "slime-ffi-gen",
    "slime-ffi-macro",
    "slime-ffi-cli",
    "slime-ffi-examples",
    "slime-ffi-test",
]

default-members = [
    "slime-ffi",
    "slime-ffi-gen",
    "slime-ffi-macro",
    "slime-ffi-cli",
]
resolver = "2"

[patch.crates-io]
slime-ffi = { path = "slime-ffi" }
