[workspace]
members = [
    "slime-ffi",
    "slime-ffi-gen",
    "slime-ffi-macro",
    "slime-ffi-cli",
    "slime-ffi-examples",
    "slime-ffi-test",
    "slime-ffi-ir", "slime-ffi-codegen", "slime-ffi-ir-parser",
]

default-members = [
    "slime-ffi",
    "slime-ffi-gen",
    "slime-ffi-macro",
    "slime-ffi-cli",
    "slime-ffi-ir",
]
resolver = "2"

[patch.crates-io]
slime-ffi = { path = "slime-ffi" }
