[package]
name = "slime-ffi-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slime-ffi-rt = { path = "../slime-ffi-rt" }
syn = { version = "2.0", features = ["full"] }
serde ={ version = "1.0", features = ["derive"] }

[features]
jvm = ["slime-ffi-rt/jvm"]
dart = ["slime-ffi-rt/dart"]
android = ["slime-ffi-rt/android"]