[package]
name = "slime-ffi-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "derive", "visit"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }