[package]
name = "slime-ffi-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# proc-macro = true

[dependencies]
slime-ffi-gen = { path = "../slime-ffi-gen" }
syn = { version = "2.0", features = ["full", "derive", "visit"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
serde = "1.0"
darling ={ version = "0.20" }

[features]
default = ["jvm"]
jvm = ["slime-ffi-gen/jvm"]