[package]
name = "slime-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slime-ffi-rt = { path = "../slime-ffi-rt" }
variant_count = "1.1.0"
num_enum = "0.5.4"
syn = { version = "2.0", features = ["full"] }

[features]
jvm = ["slime-ffi-rt/jvm"]
dart = ["slime-ffi-rt/dart"]
android = ["slime-ffi-rt/android"]