[package]
name = "slime-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Xana Hopper <xanarust@gmail.com>"]

[dependencies]
anyhow = "1.0.51"
once_cell = "1.8.0"
num_enum = "0.5.4"
enum_delegate = "0.2.0"
jni_fn = { version = "0.1.0", optional = true }
jni = { version = "0.21.1", optional = true }
ndk = { version = "0.7.0", optional = true }

[features]
jvm = ["jni_fn", "jni"]
android = ["ndk", "jvm"]
jvm_entry = []
dart = []